<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/player_image"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:src="@drawable/analogue" />

    <TextView
        android:id="@+id/playing_view"
        style="@style/nowPlayingText"
        android:layout_below="@+id/player_image"
        android:text="@string/currently_playing" />

    <LinearLayout
        android:id="@+id/details_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playing_view"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:text="@string/artists"
            android:textColor="#EEE8AA"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/playing"
            android:textColor="#EEE8AA"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_playing"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_skip_previous_black_24dp" />

        <Button
            android:id="@+id/play_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_play_arrow_black_24dp" />

        <Button
            android:id="@+id/next_button"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_skip_next_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            android:text="@string/home" />

        <TextView
            android:id="@+id/music_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/music"
            android:textAllCaps="true"
            android:textColor="#FFA500" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:text="@string/track_list" />
    </LinearLayout>

</RelativeLayout>